@@ -52,24 +52,22 @@
 package org.mmarini.routes.model.v2;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.OptionalDouble;
+import java.util.stream.Collectors;
 
 import org.mmarini.routes.model.Constants;
 
 /**
- *
- * @author mmarini
- *
+ * A traffic information for a given edge
  */
 public class EdgeTraffic implements Constants {
 
 	/**
+	 * Returns the new empty traffic information for an edge
 	 *
-	 * @param edge
-	 * @return
+	 * @param edge the edge
 	 */
 	public static EdgeTraffic create(final MapEdge edge) {
 		return new EdgeTraffic(edge, Collections.emptyList(), 0, OptionalDouble.empty());
@@ -81,17 +79,38 @@ public class EdgeTraffic implements Constants {
 	private final OptionalDouble lastTravelTime;
 
 	/**
-	 * @param edge
-	 * @param vehicles
-	 * @param time
+	 * Creates the empty traffic information for an edge
+	 *
+	 * @param edge     the edge
+	 * @param vehicles the ordered by distance list of vehicles in the edge
+	 * @param time     the instant of information
 	 */
 	protected EdgeTraffic(final MapEdge edge, final List<Vehicle> vehicles, final double time,
 			final OptionalDouble lastTravelTime) {
 		super();
+		assert (edge != null);
 		this.edge = edge;
 		this.vehicles = vehicles;
 		this.time = time;
 		this.lastTravelTime = lastTravelTime;
+	}
+
+	/**
+	 * Returns the edge traffic with a new vehicle
+	 *
+	 * @param vehicle the vehicle
+	 * @param time    the instant of insertion
+	 */
+	public EdgeTraffic addVehicle(final Vehicle vehicle, final double time) {
+		assert (!isBusy());
+		final OptionalDouble nextDistance = vehicles.isEmpty() ? OptionalDouble.empty()
+				: OptionalDouble.of(vehicles.get(0).getLocation());
+		final Vehicle v = vehicle.setLocation(0).move(edge, this.time - time, nextDistance).getElem1()
+				.setEdgeEntryTime(time);
+		final List<Vehicle> newVehicles = new ArrayList<>(vehicles);
+		newVehicles.add(0, v);
+		final EdgeTraffic result = setVehicles(newVehicles);
+		return result;
 	}
 
 	@Override
@@ -117,39 +136,47 @@ public class EdgeTraffic implements Constants {
 	}
 
 	/**
-	 * @return the edge
+	 * Returns the edge
 	 */
 	public MapEdge getEdge() {
 		return edge;
 	}
 
 	/**
-	 *
-	 * @return
+	 * Returns the last vehicle in the edge
+	 */
+	public Vehicle getLast() {
+		assert (!vehicles.isEmpty());
+		return vehicles.get(vehicles.size() - 1);
+	}
+
+	/**
+	 * Returns the last travel time if exists
 	 */
 	OptionalDouble getLastTravelTime() {
 		return lastTravelTime;
 	}
 
 	/**
-	 * 
-	 * @return
+	 * Returns the instant of traffic information
 	 */
 	public double getTime() {
 		return time;
 	}
 
 	/**
-	 *
-	 * @return
+	 * Returns the estimated travel time in the edge.
+	 * <p>
+	 * The estimation is the travel time of last exited vehicle or the minimum
+	 * travel time of edge if no vehicles are present in the edge
+	 * </p>
 	 */
 	public double getTravelTime() {
 		return lastTravelTime.orElseGet(() -> edge.getTransitTime());
 	}
 
 	/**
-	 *
-	 * @return
+	 * Returns the ordered by distance list of vehicles in the edge
 	 */
 	public List<Vehicle> getVehicles() {
 		return vehicles;
@@ -172,21 +199,25 @@ public class EdgeTraffic implements Constants {
 	}
 
 	/**
+	 * Returns the traffic information by moving all the vehicles to a given maximum
+	 * time
 	 *
-	 * @param interval
-	 * @return
+	 * @param time the maximum time
 	 */
-	public EdgeTraffic moveVehicles(final double interval) {
+	public EdgeTraffic moveVehicles(final double time) {
+		if (time <= this.time) {
+			return this;
+		}
 		if (vehicles.isEmpty()) {
-			return setTime(interval + time);
+			return setTime(time);
 		}
 		final List<Vehicle> reversed = new ArrayList<>(vehicles);
 		Collections.reverse(reversed);
-		final Tuple2<Vehicle, Double> initial = reversed.get(0).move(edge, interval, OptionalDouble.empty());
+		final Tuple2<Vehicle, Double> initial = reversed.get(0).move(edge, time - this.time, OptionalDouble.empty());
 		final Vehicle v0 = initial.getElem1();
 		final double dt = initial.getElem2();
 		if (reversed.size() == 1) {
-			return setVehicles(Arrays.asList(v0)).setTime(time + dt);
+			return setVehicles(List.of(v0)).setTime(this.time + dt);
 		}
 		double prevLoc = v0.getLocation();
 		final List<Vehicle> newVehicles = new ArrayList<>();
@@ -198,34 +229,55 @@ public class EdgeTraffic implements Constants {
 			newVehicles.add(0, nv);
 		}
 
-		final EdgeTraffic result = setVehicles(newVehicles).setTime(time + dt);
+		final EdgeTraffic result = setVehicles(newVehicles).setTime(this.time + dt);
 		return result;
 	}
 
 	/**
-	 * 
-	 * @param time
-	 * @return
+	 * Returns the edge traffic with last vehicle moved and the last travel time set
+	 */
+	public EdgeTraffic removeLast() {
+		final Vehicle vehicle = getLast();
+		assert (vehicle.getLocation() == edge.getDistance());
+		final List<Vehicle> newFromVehicle = vehicles.stream().takeWhile(v -> !vehicle.equals(v))
+				.collect(Collectors.toList());
+		final EdgeTraffic result1 = newFromVehicle.isEmpty() ? this
+				: setLastTravelTime(OptionalDouble.of(time - vehicle.getEdgeEntryTime()));
+		final EdgeTraffic result = result1.setVehicles(newFromVehicle);
+		return result;
+	}
+
+	/**
+	 * Returns the traffic information with the given last travel time
+	 *
+	 * @param lastTravelTime last travel time
 	 */
 	public EdgeTraffic setLastTravelTime(final OptionalDouble lastTravelTime) {
 		return new EdgeTraffic(edge, vehicles, time, lastTravelTime);
 	}
 
 	/**
-	 * 
-	 * @param time
-	 * @return
+	 * Returns the traffic information with the given time
+	 *
+	 * @param time the instant
 	 */
 	public EdgeTraffic setTime(final double time) {
 		return new EdgeTraffic(edge, vehicles, time, lastTravelTime);
 	}
 
 	/**
+	 * Returns the traffic information with the given vehicle list
 	 *
-	 * @param vehicles
-	 * @return
+	 * @param vehicles the list of vehicles
 	 */
 	public EdgeTraffic setVehicles(final List<Vehicle> vehicles) {
 		return new EdgeTraffic(edge, vehicles, time, lastTravelTime);
+	}
+
+	@Override
+	public String toString() {
+		final StringBuilder builder = new StringBuilder();
+		builder.append("EdgeTraffic [").append(edge.getId()).append("]");
+		return builder.toString();
 	}
 }
